# cmajiang

./: .gitignore  build.py  pyproject.toml
cmajiang/: __init__.py
src_cpp/: cmajiang.cpp
