[tool.poetry]
name = "cmajiang"
version = "0.1.0"
description = ""
authors = ["po3rin <abctail30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.11.1"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = [
	"poetry-core",
	"pybind11"
]
build-backend = "poetry.core.masonry.api"
