[tool.poetry]
name = "cmajiang"
version = "0.1.0"
description = ""
authors = ["po3rin <abctail30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pybind11 = "^2.11.1"

[tool.poetry.build]
script = "build.py"

[build-system]
requires = ["setuptools>=42", "wheel", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"
